fixed config overflow

--- a/campus_discovery_project/src/pages/Config.css
+++ b/campus_discovery_project/src/pages/Config.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     background-color: #152238;
+    overflow: auto;
 }
 
 .config-container .exit-button {
